# trading-system

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain  rustfmt.toml
.cargo/: config.toml
all_tuples/: Cargo.toml
all_tuples/src/: all_tuples.rs
custom_config/: Cargo.toml
custom_config/src/: custom_config.rs
ergnomics/: Cargo.toml
ergnomics/src/: cell.rs  ergnomics.rs  helpers.rs  num.rs
ergnomics_alloc/: Cargo.toml
ergnomics_alloc/src/: ergnomics_alloc.rs  ptr.rs
ergnomics_core/: Cargo.toml
ergnomics_core/src/: ergnomics_core.rs  futures.rs
ergnomics_gpu/: Cargo.toml
ergnomics_gpu/src/: ergnomics_gpu.rs  ext.rs  helpers.rs  mem.rs  num.rs  unsafe_array.rs  unsafe_slice.rs
ergnomics_macros/: Cargo.toml
ergnomics_macros/src/: ergnomics_macros.rs
esl_gpu/: Cargo.toml
esl_gpu/src/: debug.rs  esl_gpu.rs  num.rs
esl_raw/: Cargo.toml
esl_raw/src/: binary.rs  binomial.rs  cache.rs  candle.rs  cleaning.rs  error.rs  esl_raw.rs  hlc.rs  indicators.rs  messages.rs  parquet.rs  polars_ext.rs  postgres.rs
niobe/: Cargo.toml
niobe/src/: candles.rs  debug.rs  generic_series.rs  lines.rs  niobe.rs  options.rs  points.rs  texts.rs  vertical_bars.rs
sync/: Cargo.toml
sync/src/: byte_mpsc.rs  sync.rs  traced.rs
workspace/plot/: Cargo.toml  README.md
workspace/plot/src/: plot.rs
