[workspace]
resolver="2"
members = [
    "niobe",
    "ergnomics_core",
    "ergnomics_alloc",
    # "ergnomics_std",
    "ergnomics",
    "ergnomics_macros",
    "sync",
    "custom_config",
    "esl_raw",
    "workspace/*",
]
exclude = [
    ".idea",
    ".vscode",
]

#default profile for all crates
# [profile.dev]
#debug = 1
#debug = 1 # store only line tables
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[workspace.metadata.cauwugo]
bpaf = true

[patch.crates-io]
path_no_alloc = { git = "https://github.com/Stock84-dev/path_no_alloc", branch = "add-support-for-string-literals" }
eframe = { path = "deps/eframe" }
