[package]
name = "ergnomics"
version = "1.0.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

[lib]
name = "ergnomics"
path = "src/ergnomics.rs"

[features]
default = ["std"]
std = ["itertools/use_std"]

[dependencies]
ergnomics_macros = "1"
ergnomics_gpu = "1"
ergnomics_alloc = "1"
all_tuples = "1"
num-traits = { version = "0.2.15", features = ["libm"], default-features = false }
itertools = { version = "0.11.0", features = [], default-features = false }
eyre = "0.6.12"
tracing = "0.1.40"
# resiter = "0.5.0"
