[package]
name = "ergnomics_gpu"
version = "1.0.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2021"

[lib]
name = "ergnomics_gpu"
path = "src/ergnomics_gpu.rs"

[features]
debug = []
default = []

[dependencies]
num-traits = { version = "0.2.18", features = ["libm"], default-features = false }
bytemuck = "1.14.3"

[target.'cfg(not(target_os = "cuda"))'.dependencies]
# cust = { version = "0.3.2", optional = true }
# cuda_std = "0.2.2"
