[package]
name = "ergnomics_macros"
version = "1.0.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true
name = "ergnomics_macros"
path = "src/ergnomics_macros.rs"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
