[package]
name = "plot"
version = "1.0.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2021"

[[bin]]
name = "plot"
path = "src/plot.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
ergnomics = "1"
esl_gpu = "1"
esl_raw = "1"
niobe = "1"
eyre = "0.6.12"
path_no_alloc = "0.1.2"
eframe = { version = "0.26.2", features = ["default", "puffin", "persistence"] }
egui = { version = "0.26.2", features = ["rayon", "puffin"] }
